# overlay-e2e-tests

./: .gitignore  .gitmodules  Cargo.toml  README.md  docker-compose.yaml
.cargo/: config.toml
node/: Dockerfile  README.md  build.sh  entrypoint.sh
node/configs/: genesis.toml
node/genesis/: genesis.toml
node/genesis/accounts/: baker-0.json  foundation-1.json
node/genesis/anonymity-revokers/: ar-info-1.json  ar-info-2.json
node/genesis/identity-providers/: ip-info-0.json  ip-info-1.json
node/genesis/secrets/anonymity-revokers/: ar-data-1.json  ar-data-2.json
node/genesis/secrets/bakers/: baker-0-credentials.json
node/genesis/secrets/identity-providers/: ip-data-0.json  ip-data-1.json
src/: contract.rs  error.rs  lib.rs  main.rs  test_account.rs
src/contract/: init.rs
src/contract/init/: supported_contracts.rs
src/test_account/: create.rs  get.rs  send_ccd.rs
